# E-Commerce-Analytics-Chatbot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit-app.py
conf/: config.yaml
data/: orders.csv  products.csv  reviews.csv
src/: data_prep.py  datacreation.py  evaluation.py  llm.py  pandas_tool.py  pipe1.py  pipeline.py  rag_tool.py  router.py
vectorstore/: chroma.sqlite3
